--- a/src/components/Collection/Collection.css
+++ b/src/components/Collection/Collection.css
@@ -1,7 +1,7 @@
 .collection {
-  height: 538px;
+  height: 478px;
   width: 300px;
-  border: 3px solid rgba(145, 155, 163, 0.664);
+  border: 3px solid #25df82;
   border-radius: 10px;
   position: relative;
 }
@@ -23,4 +23,20 @@
   font-size: 21px;
   line-height: 25px;
   margin-top: 7px;
+}
+.like-btn{
+    width: 100%;
+    background-color: #56f3b7;
+    border: none;
+    border-radius: px;
+    position: absolute;
+    bottom: 0;
+    font-size: 125%;
+}
+/* .like-btn-text{
+    font-size: 125%;
+}
+*/
+.like-btn-icon{
+   color: rgb(248, 61, 61);
 }
